minor tweek of logo alignment fix

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1280,6 +1280,10 @@ footer{
             position: absolute;
             left: 0;
             top: 0;
+            
+            &+a{
+                display: flex;
+            }
         }
     }
     h1{
